--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 const username = "fun5262";             // your GitHub username
 const repo     = "esp32-stocks";        // your repo name
 const filePath = "stocks.json";         // JSON file to update
-const pat      = "YOUR_GITHUB_PAT_HERE";   // <-- paste your PAT here
+const pat      = "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";   // <-- paste your PAT here
 // ---------------------------------------------
 
 const apiURL = `https://api.github.com/repos/${username}/${repo}/contents/${filePath}`;
